# hit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql.yaml  main-pull-request.yaml  main-push.yaml  main.yaml  notify.yaml  valgrind.yaml
include/: .gitkeep  aliases.h  execute_subcommand.h  options.h
include/subcommands/init/: create_repo_dirs.h  create_repo_files.h  hooks.h  init.h
src/: execute_subcommand.c  main.c
src/subcommands/init/: create_repo_dirs.c  create_repo_files.c  hook_applypatch_msg.c  hook_commit_msg.c  hook_fsmonitor_watchman.c  hook_post_update.c  hook_pre_applypatch.c  hook_pre_commit.c  hook_pre_merge_commit.c  hook_pre_push.c  hook_pre_rebase.c  hook_pre_receive.c  hook_prepare_commit_msg.c  hook_push_to_checkout.c  hook_sendemail_validate.c  hook_update.c  init.c
tests/unit_tests/: init-command.sh  run-tests.sh
tests/valgrind/: commands-for-valgrind.txt  valgrind.sh
